--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "license": "Apache-2.0",
   "require": {
     "xmo/jwt-auth": "0.6.*",
-    "jenawant/mspro-core": "^1.5"
+    "jenawant/mspro-core": "1.0.*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
