--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 APP_NAME=skeleton
 APP_ENV=dev
 
+HTTP_SERVER_PORT=9501
+MESSAGE_SERVER_PORT=9502
+
 DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
@@ -16,20 +19,20 @@ REDIS_AUTH=
 REDIS_PORT=6379
 REDIS_DB=0
 
-AMQP_HOST = 127.0.0.1
-AMQP_PORT = 5672
-AMQP_USER = guest
-AMQP_PASSWORD = guest
-AMQP_VHOST = /
-AMQP_ENABLE = false
+AMQP_HOST=127.0.0.1
+AMQP_PORT=5672
+AMQP_USER=guest
+AMQP_PASSWORD=guest
+AMQP_VHOST=/
+AMQP_ENABLE=false
 
-SUPER_ADMIN = 1000
-ADMIN_ROLE = 1000
-CONSOLE_SQL = true
+SUPER_ADMIN=1000
+ADMIN_ROLE=1000
+CONSOLE_SQL=true
 
-JWT_LOGIN_TYPE = mpop
-JWT_SECRET = abcdefg
-JWT_API_SECRET = 654321
+JWT_LOGIN_TYPE=mpop
+JWT_SECRET=abcdefg
+JWT_API_SECRET=654321
 
 MAIL_MAILER=smtp
 MAIL_SMTP_HOST=smtpdm.aliyun.com
